# SnapLex

./: .env.example  .gitignore  AGENTS.md  BuildTrial.cmd  README.md  RequireRealProvider.cmd  Role.md  SetupTrial.cmd  SmokeTrial.cmd  StartFakeTrial.cmd  StartPackagedFakeTrial.cmd  StartPackagedTrial.cmd  StartTrial.cmd  TRY.md  pyproject.toml
.codex/: project-git-workflow.json  project-ops-workflow.json
docs/: codex-git-workflow.md  codex-ops-workflow.md  development_plan.md  p0_final_validation_report.md  p0_p7_final_report.md  p0_p7_goal_mode_execution_guide.md  p0_repository_baseline_goal_guide.md  p0_to_p1_handoff.md  p10_account_strategy.md  p10_credential_strategy_decisions.md  p10_final_validation_report.md  p10_secure_credential_account_strategy_goal_guide.md  p10_secure_storage_notes.md  p10_smoke_evidence.md  p10_to_p11_handoff.md  p10_todo.md  p11_boundary_scan_evidence.md  p11_final_validation_report.md  p11_key_rotation_least_privilege.md  p11_keyring_packaging_decision.md  p11_keyring_smoke_evidence.md  p11_packaged_trial_evidence.md  p11_private_trial_release_checklist.md  p11_provider_onboarding_notes.md  p11_to_p12_handoff.md  p11_todo.md  p11_trial_release_hardening_goal_guide.md  p11_visible_windows_smoke_evidence.md  p12_boundary_scan_evidence.md  p12_credential_package_variant_decision.md  p12_feedback_intake_template.md  p12_final_validation_report.md  p12_manual_environment_checks.md  p12_private_trial_pilot_feedback_triage_goal_guide.md  p12_private_trial_release_notes.md  p12_real_provider_smoke_decision.md  p12_to_p13_handoff.md  p12_todo.md  (+209 more)
(+79 files in other folders)
