[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snaplex"
version = "0.1.0"
description = "Desktop floating utility for quick screen and clipboard translation."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["desktop", "ocr", "translation", "pyside6"]
dependencies = []

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
]
capture = [
  "mss>=9.0",
]
ocr = [
  "paddleocr>=2.8",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
snaplex = "snaplex.__main__:main"

[tool.setuptools.packages.find]
include = ["snaplex*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["snaplex"]
